--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body {
 
 <!-- LOADING SCREEN -->
 <div id="loader">
-    <img src="https://i.ibb.co/zJ0RF2h/ACF-logo.png">
+    <img src="https://raw.githubusercontent.com/ankitgothwal2010/Phoneinfopro/refs/heads/Assest/IMG_8002.jpeg">
     <h2>INITIALIZING ANKIT CYBER FORCE SYSTEM…</h2>
     <div id="loaderBar">
         <div id="loaderBarFill"></div>
@@ -143,7 +143,7 @@ body {
 
 <!-- SIDEBAR -->
 <div class="sidebar">
-    <img src="https://i.ibb.co/zJ0RF2h/ACF-logo.png">
+    <img src="https://raw.githubusercontent.com/ankitgothwal2010/Phoneinfopro/refs/heads/Assest/IMG_8002.jpeg">
     <h2>ANKIT<br>CYBER FORCE</h2>
 
     <a href="#" onclick="loadPage('home')">Home</a>
